--- a/package.json
+++ b/package.json
@@ -27,23 +27,23 @@
     "lint"
   ],
   "devDependencies": {
-    "@types/jest": "^27.0.4",
-    "@types/node-fetch": "2",
-    "@types/yargs": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.9.1",
-    "bgm-types": "2",
-    "eslint": "^7.28.0",
-    "jest": "^27.0.4",
+    "@types/jest": "^27.5.2",
+    "@types/node-fetch": "^2.6.2",
+    "@types/yargs": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "bgm-types": "^2.0.2",
+    "eslint": "^7.32.0",
+    "jest": "^27.5.1",
     "jest-fetch-mock": "^3.0.3",
     "pre-commit": "^1.2.2",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^27.1.5",
     "tsconfig-replace-paths": "^0.0.11",
-    "typescript": "^4.3.5"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "node-fetch": "^2.0.0",
-    "winston": "^3.4.0",
-    "yargs": "^17.3.1"
+    "node-fetch": "^2.6.7",
+    "winston": "^3.7.2",
+    "yargs": "^17.5.1"
   }
 }
