--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@types/jest": "^27.5.2",
     "@types/node-fetch": "^2.6.2",
-    "@types/yargs": "^17.0.10",
+    "@types/yargs": "17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "bgm-types": "^2.0.2",
